# Todo-App

./: .gitignore  CLAUDE.md  README.md  demo.py  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
backend/: .dockerignore  .gitignore  DEPLOY_HUGGINGFACE.md  Dockerfile  pyproject.toml  requirements.txt
backend/migrations/: 001_initial_schema.sql  002_better_auth_schema.sql
backend/src/: __init__.py  db.py  main.py
backend/src/api/: __init__.py  dependencies.py
backend/src/api/routes/: __init__.py  tasks.py
backend/src/middleware/: __init__.py  auth.py  error_handler.py
backend/src/models/: __init__.py  schemas.py  task.py  user.py
backend/src/services/: __init__.py  task_service.py
docs/: WSL2-Setup-Complete.md  WSL2-vs-PowerShell.md
frontend/: auth.ts  package-lock.json  package.json  proxy.ts
frontend/src/: proxy.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: error-boundary.tsx
frontend/src/lib/: api.ts  auth-server.ts  auth.ts
frontend/src/types/: task.ts
history/prompts/001-phase1-console/: analyze-phase1-artifacts.md  create-phase1-console-spec.md  create-phase1-tasks.md  (+2 more)
phase-I/: .gitignore
phase-I/src/: __init__.py
specs/001-phase1-console/: ANALYSIS_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase2-web-app/: ANALYSIS_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
src/cli/: __init__.py  commands.py
src/services/: task_service.py
(+27 files in other folders)
